fixed the button jump and char limit

--- a/src/components/UserFeedback/_UserFeedback.scss
+++ b/src/components/UserFeedback/_UserFeedback.scss
@@ -112,6 +112,7 @@ button {
     height: 48px;
     width: 180px;
     padding: 0 !important;
+    margin: 0;
     font-size: 14px;
     position: relative;
     background-color: #2f4668;
